remove background when game over

--- a/index3.html
+++ b/index3.html
@@ -128,7 +128,7 @@
         }
 
         function draw() {
-            background(200);
+            // background(200);
 
             if (!gameOver) {
                 // Move and display the road to create a downward movement illusion
@@ -186,7 +186,7 @@
         }
 
         function showGameOver() {
-            background(50, 50, 50, 0);
+            // background(50, 50, 50, 0);
             fill(255, 0, 0);
             textSize(50);
             textAlign(CENTER, CENTER);
